--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -17,6 +17,6 @@
         android:title="@string/title_message" />
     <item
         android:id="@+id/navigation_about"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@android:drawable/star_off"
         android:title="@string/title_about" />
 </menu>
