--- a/app/src/main/res/layout/activity_card.xml
+++ b/app/src/main/res/layout/activity_card.xml
@@ -7,7 +7,8 @@
     tools:context=".activity.CardActivity"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:layout_gravity="center|bottom">
+    android:layout_gravity="center|bottom"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="wrap_content"
