--- a/app/src/main/res/layout/activity_create_pdf_word_item_layout.xml
+++ b/app/src/main/res/layout/activity_create_pdf_word_item_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
+    android:layout_height="50dp"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="0dp"
