--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.EditBookActivity">
+    tools:context=".activity.EditBookActivity"
+    tools:ignore="MissingDefaultResource">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
