--- a/app/src/main/res/layout/activity_edit_game.xml
+++ b/app/src/main/res/layout/activity_edit_game.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.MakeGameActivity">
+    tools:context=".activity.MakeGameActivity"
+    tools:ignore="MissingDefaultResource">
 
     <com.lvleo.dataloadinglayout.DataLoadingLayout
         android:layout_marginHorizontal="7dp"
