--- a/app/src/main/res/layout/activity_words_list.xml
+++ b/app/src/main/res/layout/activity_words_list.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.WordsListActivity">
+    tools:context=".activity.WordsListActivity"
+    tools:ignore="MissingDefaultResource">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
