--- a/app/src/main/res/layout/books_item.xml
+++ b/app/src/main/res/layout/books_item.xml
@@ -7,7 +7,8 @@
     android:layout_margin="5dp"
     android:clickable="true"
     android:focusable="true"
-    app:cardElevation="4dp">
+    app:cardElevation="4dp"
+    tools:ignore="MissingDefaultResource">
 
     <LinearLayout
         android:layout_width="match_parent"
