--- a/app/src/main/res/layout/pager_adapter.xml
+++ b/app/src/main/res/layout/pager_adapter.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    tools:ignore="MissingDefaultResource">
 
     <FrameLayout
         android:layout_width="match_parent"
