--- a/app/src/main/res/menu/delete_game.xml
+++ b/app/src/main/res/menu/delete_game.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="MissingDefaultResource">
     <item
         android:id="@+id/game_delete"
         android:icon="@drawable/ic_delete_black_24dp"
